2009-05-26  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h,library.c.usb.c:: Unify and abstract ptp object handling.
	  Add "on demand" loading throughout library.c.

	  (Larger rewrite ... might still be a bit buggy.)

2009-04-10  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h,ptp-pack.c: make nikon check event return a
	  generic PTPContainer, make canon check event also return
	  a generic PTPContainer.

	* ptp.c,ptp.h: Added 2 PTP event queue, generic events and Canon EOS.

	* library.c: Rewrote wait_for_event to use event queues etc.

	* library.c: Hooked up the first try at the trigger capture method,
	  currently just PTP generic, others to follow.

2009-03-27  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h: use Nikon Get Vendor Extension Codes
	  call instead of fixed lists. Removed static lists.

	* library.c: In wait_event, handle Nikon cameras with Check Event
	  to also allow tethered capture via SDRAM. (cut and paste code needs
	  to be cleaned up sometime).

	* library.c: Nikon LiveView support for --capture-preview.
	* library.c: Nikon DSLR: AutoFocus Drive (always possible)
	  and Manual Focus Drive (only during LiveView) added.

	* library.c: If a MTP device has vendor name Canon or Nikon, mark it as Nikon
	  or Canon.

	* library.c: Canon capture: Automatically fallback to SDRAM if
	  no CF/SD Card inserted.
	* library.c: Canon EOS Capture: download all images on tethered capture.

	* config.c: longer timeout for Canon ViewFinder On command
	* config.c: some more error reporting on the table driven config engine
	* config.c: some new values added

	* music-players.h, device-flags.h: imported from latest libmtp.

	* library.c: Added:
		Nikon CoolPix P50, S60
		Canon Digital IXUS 85
		Canon PowerShot A740, G10, 
		Canon EOS 5D Mark II
	

2009-01-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Adjusted flags for Canon Powershots to match capture
	  abilities on the SDK page.