@@ -1414,6 +1414,8 @@ camera_capture_preview (Camera *camera, CameraFile *file, GPContext *context)
 				gp_file_set_name (file, "preview.jpg");
 				free (data);
 			}
+			else
+				gp_log (GP_LOG_ERROR,"ptp2_prepare_eos_preview", "get_viewfinder_image failed: 0x%x", ret);
 			SET_CONTEXT_P(params, NULL);
 			return GP_OK;
 		}
@@ -1739,14 +1741,14 @@ camera_canon_eos_capture (Camera *camera, CameraCaptureType type, CameraFilePath
 		for (i=0;i<nrofentries;i++) {
 			gp_log (GP_LOG_DEBUG, "ptp2/canon_eos_capture", "entry type %04x", entries[i].type);
 			if (entries[i].type == PTP_CANON_EOS_CHANGES_TYPE_OBJECTTRANSFER) {
-				gp_log (GP_LOG_DEBUG, "ptp2/canon_eos_capture", "Found new object! OID %ux, name %s", (unsigned int)entries[i].u.object.oid, entries[i].u.object.oi.Filename);
+				gp_log (GP_LOG_DEBUG, "ptp2/canon_eos_capture", "Found new object! OID 0x%x, name %s", (unsigned int)entries[i].u.object.oid, entries[i].u.object.oi.Filename);
 				newobject = entries[i].u.object.oid;
 				memcpy (&oi, &entries[i].u.object.oi, sizeof(oi));
 				break;
 			}
 			if (entries[i].type == PTP_CANON_EOS_CHANGES_TYPE_OBJECTINFO) {
 				/* just add it to the filesystem, and return in CameraPath */
-				gp_log (GP_LOG_DEBUG, "ptp2/canon_eos_capture", "Found new object! OID %ux, name %s", (unsigned int)entries[i].u.object.oid, entries[i].u.object.oi.Filename);
+				gp_log (GP_LOG_DEBUG, "ptp2/canon_eos_capture", "Found new object! OID 0x%x, name %s", (unsigned int)entries[i].u.object.oid, entries[i].u.object.oi.Filename);
 				newobject = entries[i].u.object.oid;
 				memcpy (&oi, &entries[i].u.object.oi, sizeof(oi));
 				add_object (camera, newobject, context);
@@ -2279,7 +2281,7 @@ camera_wait_for_event (Camera *camera, int timeout,
 					break;
 				case PTP_CANON_EOS_CHANGES_TYPE_OBJECTINFO:
 					/* just add it to the filesystem, and return in CameraPath */
-					gp_log (GP_LOG_DEBUG, "ptp2/canon_eos_capture", "Found new objectinfo! OID %ux, name %s", (unsigned int)entries[i].u.object.oid, entries[i].u.object.oi.Filename);
+					gp_log (GP_LOG_DEBUG, "ptp2/canon_eos_capture", "Found new objectinfo! OID 0x%x, name %s", (unsigned int)entries[i].u.object.oid, entries[i].u.object.oi.Filename);
 					newobject = entries[i].u.object.oid;
 					add_object (camera, newobject, context);
 					path = (CameraFilePath *)malloc(sizeof(CameraFilePath));
