@@ -1,3 +1,9 @@
+2009-07-09  Axel Waggershauser <awagger@web.de>                                                                                    
+	* ptp.c: Some sprintf format adjustments.
+	* ptp.h: EOS_RemoteRelease doc comments.
+	* config.c: More Canon ISO and FStop values for the Canon 5D Mark II.
+	* ptp-pack.c,library.c: More EOS debugging output.
+
 2009-05-26  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.c,ptp.h,library.c.usb.c:: Unify and abstract ptp object handling.
